# Qt_MusicPlayer

./: AudioInfo.h  AudioInfoBox.qml  CMakeLists.txt  ImageButton.qml  Main.qml  PlayerController.cpp  PlayerController.h  README.md  TextButton.qml  main.cpp  resources.qrc
qml/: AudioInfoBox.qml  Main.qml
